syntax = "proto3";

package fathom.v1;

service RuntimeService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc EnqueueTrigger(EnqueueTriggerRequest) returns (EnqueueTriggerResponse);
  rpc AttachSessionEvents(AttachSessionEventsRequest) returns (stream SessionEvent);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpsertUserProfile(UpsertUserProfileRequest) returns (UpsertUserProfileResponse);
  rpc GetAgentProfile(GetAgentProfileRequest) returns (GetAgentProfileResponse);
  rpc UpsertAgentProfile(UpsertAgentProfileRequest) returns (UpsertAgentProfileResponse);
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_RUNNING = 2;
  TASK_STATUS_SUCCEEDED = 3;
  TASK_STATUS_FAILED = 4;
  TASK_STATUS_CANCELED = 5;
}

enum RefreshScope {
  REFRESH_SCOPE_UNSPECIFIED = 0;
  REFRESH_SCOPE_AGENT = 1;
  REFRESH_SCOPE_USER = 2;
  REFRESH_SCOPE_ALL = 3;
}

message AgentProfile {
  string agent_id = 1;
  string display_name = 2;
  string agents_md = 3;
  string soul_md = 4;
  string identity_md = 5;
  string guidelines_md = 6;
  string code_of_conduct_md = 7;
  string long_term_memory_md = 8;
  uint64 spec_version = 9;
  int64 updated_at_unix_ms = 10;
}

message UserProfile {
  string user_id = 1;
  string name = 2;
  string nickname = 3;
  string preferences_json = 4;
  string user_md = 5;
  string long_term_memory_md = 6;
  int64 updated_at_unix_ms = 7;
}

message Task {
  string task_id = 1;
  string session_id = 2;
  string tool_name = 3;
  string args_json = 4;
  TaskStatus status = 5;
  string result_message = 6;
  int64 created_at_unix_ms = 7;
  int64 updated_at_unix_ms = 8;
}

message UserMessageTrigger {
  string user_id = 1;
  string text = 2;
}

message TaskDoneTrigger {
  string task_id = 1;
  TaskStatus status = 2;
  string result_message = 3;
}

message HeartbeatTrigger {}

message CronTrigger {
  string key = 1;
}

message RefreshProfileTrigger {
  RefreshScope scope = 1;
  string user_id = 2;
}

message Trigger {
  string trigger_id = 1;
  int64 created_at_unix_ms = 2;
  oneof kind {
    UserMessageTrigger user_message = 10;
    TaskDoneTrigger task_done = 11;
    HeartbeatTrigger heartbeat = 12;
    CronTrigger cron = 13;
    RefreshProfileTrigger refresh_profile = 14;
  }
}

message TriggerAcceptedEvent {
  Trigger trigger = 1;
  uint64 queue_depth = 2;
}

message TurnStartedEvent {
  uint64 turn_id = 1;
  uint64 trigger_count = 2;
}

message TurnEndedEvent {
  uint64 turn_id = 1;
  string reason = 2;
  uint64 history_size = 3;
}

message AssistantOutputEvent {
  string content = 1;
}

message TaskStateChangedEvent {
  Task task = 1;
}

message ProfileRefreshedEvent {
  RefreshScope scope = 1;
  repeated string refreshed_user_ids = 2;
  uint64 agent_spec_version = 3;
}

message SessionEvent {
  string session_id = 1;
  int64 created_at_unix_ms = 2;
  oneof kind {
    TriggerAcceptedEvent trigger_accepted = 10;
    TurnStartedEvent turn_started = 11;
    TurnEndedEvent turn_ended = 12;
    AssistantOutputEvent assistant_output = 13;
    TaskStateChangedEvent task_state_changed = 14;
    ProfileRefreshedEvent profile_refreshed = 15;
  }
}

message SessionSummary {
  string session_id = 1;
  int64 created_at_unix_ms = 2;
  string agent_id = 3;
  repeated string participant_user_ids = 4;
  AgentProfile agent_profile_copy = 5;
  repeated UserProfile participant_user_profiles_copy = 6;
  uint64 queued_trigger_count = 7;
  uint64 history_entry_count = 8;
  uint64 pending_task_count = 9;
  uint64 running_task_count = 10;
}

message CreateSessionRequest {
  string agent_id = 1;
  repeated string participant_user_ids = 2;
}

message CreateSessionResponse {
  SessionSummary session = 1;
}

message ListSessionsRequest {}

message ListSessionsResponse {
  repeated SessionSummary sessions = 1;
}

message EnqueueTriggerRequest {
  string session_id = 1;
  Trigger trigger = 2;
}

message EnqueueTriggerResponse {
  string trigger_id = 1;
  uint64 queue_depth = 2;
}

message AttachSessionEventsRequest {
  string session_id = 1;
}

message ListTasksRequest {
  string session_id = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message CancelTaskRequest {
  string session_id = 1;
  string task_id = 2;
}

message CancelTaskResponse {
  bool canceled = 1;
  Task task = 2;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  UserProfile profile = 1;
}

message UpsertUserProfileRequest {
  UserProfile profile = 1;
}

message UpsertUserProfileResponse {
  UserProfile profile = 1;
}

message GetAgentProfileRequest {
  string agent_id = 1;
}

message GetAgentProfileResponse {
  AgentProfile profile = 1;
}

message UpsertAgentProfileRequest {
  AgentProfile profile = 1;
}

message UpsertAgentProfileResponse {
  AgentProfile profile = 1;
}
